resources/configuration-anomaly-detection/stage/configuration-anomaly-detection.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: el-cad-event-listener
  name: configuration-anomaly-detection-stg
spec:
  host: configuration-anomaly-detection.stage.devshift.net
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-cad-event-listener
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
